# ScreenTranslate

./: .gitignore  CMakeLists.txt  LICENSE.QT  README.md  clean_config.bat  screen_translate.pro
res/: resources.qrc
res/themes/: app_patch.qss  py_dracula_dark.qss  py_dracula_light.qss
src/: framelessdialog.cpp  framelessdialog.h  geminiapihandler.cpp  geminiapihandler.h  main.cpp  mainwindow.cpp  mainwindow.h  screensnippet.cpp  screensnippet.h  settingsdialog.cpp  settingsdialog.h  titlebar.cpp  titlebar.h
